test/files/neg/t2070.check
t2070.scala:8: error: The kind of trait T does not conform to the expected kind of type T[X] in trait A.
t2070.B.T's type parameters do not match type T's expected parameters: type X (in object B) has one type parameter, but type X (in trait A) has none
    trait T[X[_]]
          ^
one error found
